tests/fixtures/invalid/int_sub_bytes.py
# Cannot subtract Int and Bytes
x: int = 1 - b"hello"
